# libshvgate-rs

./: .gitignore  Cargo.toml  README.md  clippy.toml  tree_example.yaml
.github/: dependabot.yml
.github/workflows/: rust.yml
examples/: sim_device.rs  tree_example.yaml
src/: data.rs  fs.rs  journal.rs  lib.rs  rpc.rs  tree.rs
src/tree/: yaml.rs
