[package]
name = "libshvgate-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
humantime = "2.3.0"
log = "0.4.29"
shvclient = { version = "0.23.0", default-features = false }
shvrpc = { version = "10.0", features = ["journal"] }
smol = { version = "2.0.2", optional = true }
tokio = { version = "1.49.0", features = ["fs"], optional = true }
tokio-util = { version = "0.7.18", features = ["io"], optional = true }
url = "2.5.8"

[features]
default = ["tokio"]

tokio = ["dep:tokio", "dep:tokio-util", "shvclient/tokio"]
smol = ["dep:smol", "shvclient/smol"]

[dev-dependencies]
tokio = { version = "1.49.0" }
shvclient = { version = "0.23.0", features = ["tokio"] }
simple_logger = { version = "5.1.0", features = ["stderr"] }

# [patch.crates-io]
# shvclient = { path = "../libshvclient-rs" }
