[package]
name = "libshvgate-rs"
version = "0.1.0"
edition = "2024"

[[example]]
name = "sim_device"

[dependencies]
async-compression = { version = "0.4.37", features = ["gzip", "tokio"] }
futures = "0.3.31"
hex = "0.4.3"
humantime = "2.3.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
sha1 = "0.10.6"
shvclient = { version = "0.28.0", default-features = false }
shvrpc = { version = "12.0", features = ["journal"] }
smol = { version = "2.0.2", optional = true }
tokio = { version = "1.49.0", features = ["fs", "io-util"], optional = true }
tokio-stream = { version = "0.1.18", features = ["fs"] }
tokio-util = { version = "0.7.18", features = ["io"], optional = true }
url = "2.5.8"

[features]
default = ["tokio"]

tokio = ["dep:tokio", "dep:tokio-util", "shvclient/tokio"]
smol = ["dep:smol", "shvclient/smol"]

[dev-dependencies]
tokio = { version = "1.49.0" }
shvclient = { version = "0.28.0", features = ["tokio"] }
simple_logger = { version = "5.1.0", features = ["stderr"] }
rand = "0.9.2"

# [patch.crates-io]
# shvclient = { path = "../libshvclient-rs" }
# shvrpc = { path = "../libshvrpc-rs" }
