[package]
name = "libshvgate-rs"
version = "0.1.0"
edition = "2024"

[[example]]
name = "sim_device"

[dependencies]
async-compression = { version = "0.4.37", features = ["gzip", "tokio"] }
futures = "0.3.31"
hex = "0.4.3"
humantime = "2.3.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
sha1 = "0.10.6"
shvclient = { version = "2.0", default-features = false }
shvrpc = { version = "13.3", features = ["journal"] }
smol = { version = "2.0.2", optional = true }
tokio = { version = "1.49.0", features = ["fs", "io-util"], optional = true }
tokio-stream = { version = "0.1.18", features = ["fs"] }
tokio-util = { version = "0.7.18", features = ["io"], optional = true }
url = "2.5.8"

[features]
default = ["tokio"]

tokio = ["dep:tokio", "dep:tokio-util", "shvclient/tokio"]
smol = ["dep:smol", "shvclient/smol"]

[dev-dependencies]
tokio = { version = "1.49.0" }
shvclient = { version = "2.0", features = ["tokio"] }
simple_logger = { version = "5.1.0", features = ["stderr"] }
rand = "0.9.2"

# [patch.crates-io]
# shvclient = { path = "../libshvclient-rs" }
# shvrpc = { path = "../libshvrpc-rs" }

[lints.clippy]
pedantic = {priority = -1, level = "warn"}

allow_attributes = "warn"
allow_attributes_without_reason = "warn"
box_collection = "warn"
dbg_macro = "warn"
enum_variant_names = "warn"
equatable_if_let = "warn"
exit = "warn"
indexing_slicing = "warn"
infinite_loop = "warn"
iter_on_single_items = "warn"
large_types_passed_by_value = "warn"
let_underscore_must_use = "warn"
linkedlist = "warn"
map_err_ignore = "warn"
missing_assert_message = "warn"
needless_pass_by_ref_mut = "warn"
option-if-let-else = "warn"
option_option = "warn"
or_fun_call = "warn"
owned_cow = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_allocation = "warn"
redundant_clone = "warn"
redundant_type_annotations = "warn"
ref_option = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
string_lit_as_bytes = "warn"
string_slice = "warn"
trivially_copy_pass_by_ref = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnecessary_box_returns = "warn"
unnecessary_wraps = "warn"
unneeded_field_pattern = "warn"
unwrap_used = "warn"
upper_case_acronyms = "warn"
useless_let_if_seq = "warn"
vec_box = "warn"
wrong_self_convention = "warn"

doc_markdown = "allow"
expect_used = "allow"
explicit_iter_loop = "allow"
float-cmp = "allow"
format_push_string = "allow"
items_after_statements = "allow"
manual_string_new = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
panic = "allow"
should_panic_without_expect = "allow"
struct_excessive_bools = "allow"
todo = "allow"
too_many_lines = "allow"
enum_glob_use = "allow"
unused_self = "allow"
